--- a/css/style.css
+++ b/css/style.css
@@ -75,9 +75,14 @@ h1{
     flex-basis: 100%;
 }
 
+h3, h4{
+    border-left: 1px solid white;
+    padding-left: 10px;
+}
+
 /* FOOTER */
 
-.footer{
+footer{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
